<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/amount_fragment">

    <fragment
        android:id="@+id/amount_fragment"
        android:name="anelfdz.paymentapp.ui.amount.AmountFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_amount">

        <action
            android:id="@+id/showPaymentMethods"
            app:destination="@id/payment_method_fragment" />
    </fragment>

    <fragment
        android:id="@+id/payment_method_fragment"
        android:name="anelfdz.paymentapp.ui.paymentMethod.PaymentMethodFragment"
        android:label="@string/fragment_payment_method_label"
        tools:layout="@layout/fragment_payment_methods">

        <argument
            android:name="amount"
            app:argType="string" />

        <action
            android:id="@+id/showBanks"
            app:destination="@id/bank_fragment" />

    </fragment>

    <fragment
        android:id="@+id/bank_fragment"
        android:name="anelfdz.paymentapp.ui.bank.BankFragment"
        android:label="@string/fragment_bank_label"
        tools:layout="@layout/fragment_banks">

        <argument
            android:name="amount"
            app:argType="string" />

        <argument
            android:name="paymentMethod"
            app:argType="anelfdz.paymentapp.data.vo.PaymentMethod" />

        <action
            android:id="@+id/showInstallments"
            app:destination="@id/installment_fragment" />

    </fragment>

    <fragment
        android:id="@+id/installment_fragment"
        android:name="anelfdz.paymentapp.ui.installment.InstallmentFragment"
        android:label="@string/fragment_installment_label"
        tools:layout="@layout/fragment_installments">

        <argument
            android:name="amount"
            app:argType="string" />

        <argument
            android:name="paymentMethod"
            app:argType="anelfdz.paymentapp.data.vo.PaymentMethod" />

        <argument
            android:name="bank"
            app:argType="anelfdz.paymentapp.data.vo.Bank" />
    </fragment>

</navigation>